--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.2.1",
-    "astro": "^3.4.0",
-    "typescript": "^5.2.2"
+    "@astrojs/check": "0.2.1",
+    "astro": "3.4.0"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "0.12.1",
+    "typescript": "5.2.2"
   }
 }
