--- a/package.json
+++ b/package.json
@@ -11,11 +11,23 @@
   },
   "dependencies": {
     "@astrojs/check": "0.2.1",
-    "@astrojs/tailwind": "5.0.2",
+    "@astrojs/netlify": "3.0.3",
+    "@astrojs/react": "3.0.4",
+    "@astrojs/tailwind": "^5.0.2",
     "astro": "3.4.0",
-    "tailwindcss": "3.0.24"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@types/react": "18.0.21",
+    "@typescript-eslint/eslint-plugin": "6.9.0",
+    "eslint": "8.52.0",
+    "eslint-config-standard-with-typescript": "39.1.1",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-n": "16.2.0",
+    "eslint-plugin-promise": "6.1.1",
+    "openai": "4.14.1",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.1",
     "typescript": "5.2.2"
