--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@astrojs/check": "0.2.1",
     "@astrojs/netlify": "3.0.3",
     "@astrojs/react": "3.0.4",
-    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/tailwind": "5.0.2",
     "astro": "3.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "3.0.24"
   },
   "devDependencies": {
     "@types/react": "18.0.21",
