--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "0.2.1",
-    "@astrojs/netlify": "3.0.3",
     "@astrojs/react": "3.0.4",
     "@astrojs/tailwind": "5.0.2",
+    "@astrojs/vercel": "5.1.0",
     "astro": "3.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
